--- a/nft_minter/programs/nft_minter/Cargo.toml
+++ b/nft_minter/programs/nft_minter/Cargo.toml
@@ -14,9 +14,10 @@ cpi = ["no-entrypoint"]
 no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
-idl-build = ["anchor-lang/idl-build"]
 
 
 [dependencies]
-anchor-lang = "0.30.1"
+anchor-lang = "0.24.2"
+anchor-spl = "0.24.2"
+
 
